--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Laravel Expert</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laravel Expert</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
+
 <body>
-  <h1>Laravel Expert</h1>
+    <div class="gig-container d-flex justify-content-center align-items-center">
+        <div itemscope itemtype='http://schema.org/Person' class='fiverr-seller-widget' style='display: inline-block;'>
+            <a itemprop='url' href=https://www.fiverr.com/jayedhasan232 rel="nofollow" target="_blank"
+                style='display: inline-block;'>
+                <div class='fiverr-seller-content'
+                    id='fiverr-seller-widget-content-da32d390-e1c5-4fd0-95b7-b033266f8d4f' itemprop='contentURL'
+                    style='display: none;'></div>
+                <div id='fiverr-widget-seller-data' style='display: none;'>
+                    <div itemprop='name'>jayedhasan232</div>
+                    <div itemscope itemtype='http://schema.org/Organization'>
+                        <span itemprop='name'>Fiverr</span>
+                    </div>
+                    <div itemprop='jobtitle'>Seller</div>
+                    <div itemprop='description'>Hi,
+                        I'm a full-stack web developer, working with Laravel for more than three years. Also working
+                        with ReactJS.
+
+                        So, if you are looking for anyone who can provide a complete solution for your web app then you
+                        can hire me.
+
+                        Thanks</div>
+                </div>
+            </a>
+        </div>
+
+        <script id='fiverr-seller-widget-script-da32d390-e1c5-4fd0-95b7-b033266f8d4f'
+            src='https://widgets.fiverr.com/api/v1/seller/jayedhasan232?widget_id=da32d390-e1c5-4fd0-95b7-b033266f8d4f'
+            data-config='{"category_name":"Programming \u0026 Tech"}' async='true' defer='true'></script>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
